Fix cluster connection issue

--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,9 @@
 # Redis version to use
 REDIS_VERSION=latest
 
+# Redis bind address (interface to listen on)
+REDIS_BIND_ADDRESS=0.0.0.0
+
 # Redis Persistence Configuration
 # Enable AOF (Append Only File) persistence
 # yes: Enable AOF, no: Use RDB only
@@ -15,7 +18,7 @@ REDIS_APPENDFSYNC=everysec
 
 # RDB save strategy (format: seconds changes)
 # Default: At least 1 change in 900 seconds, 10 changes in 300 seconds, 10000 changes in 60 seconds
-REDIS_SAVE=900 1 300 10 60 10000
+REDIS_SAVE="900 1 300 10 60 10000"
 
 # Redis Memory Configuration
 # Maximum memory limit (keys will be deleted according to eviction policy when exceeded)
@@ -42,6 +45,9 @@ REDIS_MEMORY_LIMIT=512M
 # Redis Commander Configuration
 # Redis Commander version
 REDIS_COMMANDER_VERSION=latest
+
+# Redis Commander bind address (interface to listen on)
+REDIS_COMMANDER_BIND_ADDRESS=0.0.0.0
 
 # Redis Commander web interface access port
 REDIS_COMMANDER_PORT=18081
