--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,4 +1,5 @@
 x-base: &base
+  network_mode: host
   volumes:
     - /etc/localtime:/etc/localtime:ro
   logging:
@@ -12,23 +13,31 @@ x-redis-node: &redis-node
   <<: *base
   image: "redis:${REDIS_VERSION:-latest}"
   restart: unless-stopped
-  command: >
-    redis-server
-    --cluster-enabled yes
-    --cluster-config-file nodes.conf
-    --cluster-node-timeout 5000
-    --appendonly ${REDIS_APPENDONLY:-no}
-    --appendfsync ${REDIS_APPENDFSYNC:-everysec}
-    --save ${REDIS_SAVE:-900 1 300 10 60 10000}
-    --maxmemory ${REDIS_MAXMEMORY:-256mb}
-    --maxmemory-policy ${REDIS_MAXMEMORY_POLICY:-allkeys-lru}
-    --port 6379
+  entrypoint:
+    - /usr/local/bin/redis-server
+    - --bind
+    - "${REDIS_BIND_ADDRESS:-0.0.0.0}"
+    - --cluster-enabled
+    - "yes"
+    - --cluster-config-file
+    - "nodes.conf"
+    - --cluster-node-timeout
+    - "5000"
+    - --appendonly
+    - "${REDIS_APPENDONLY:-no}"
+    - --appendfsync
+    - "${REDIS_APPENDFSYNC:-everysec}"
+    - --save
+    - "${REDIS_SAVE:-900 1 300 10 60 10000}"
+    - --maxmemory
+    - "${REDIS_MAXMEMORY:-256mb}"
+    - --maxmemory-policy
+    - "${REDIS_MAXMEMORY_POLICY:-allkeys-lru}"
   healthcheck:
-    test: ["CMD", "redis-cli", "ping"]
-    interval: 5s
-    timeout: 3s
+    interval: 3s
+    timeout: 1s
     retries: 10
-    start_period: 5s
+    start_period: 3s
   deploy:
     resources:
       limits:
@@ -38,43 +47,49 @@ x-redis-node: &redis-node
 services:
   redis-node-1:
     <<: *redis-node
-    ports:
-      - "7001:6379"
+    command: ["--port", "7001"]
+    healthcheck:
+      test: ["CMD", "redis-cli", "-p", "7001", "ping"]
     volumes:
       - redis_node_1_data:/data
 
   redis-node-2:
     <<: *redis-node
-    ports:
-      - "7002:6379"
+    command: ["--port", "7002"]
+    healthcheck:
+      test: ["CMD", "redis-cli", "-p", "7002", "ping"]
     volumes:
       - redis_node_2_data:/data
 
   redis-node-3:
     <<: *redis-node
-    ports:
-      - "7003:6379"
+    command: ["--port", "7003"]
+    healthcheck:
+      test: ["CMD", "redis-cli", "-p", "7003", "ping"]
     volumes:
       - redis_node_3_data:/data
 
   redis-node-4:
     <<: *redis-node
-    ports:
-      - "7004:6379"
+    command: ["--port", "7004"]
+    healthcheck:
+      test: ["CMD", "redis-cli", "-p", "7004", "ping"]
     volumes:
       - redis_node_4_data:/data
 
   redis-node-5:
     <<: *redis-node
-    ports:
-      - "7005:6379"
+    command: ["--port", "7005"]
+    healthcheck:
+      test: ["CMD", "redis-cli", "-p", "7005", "ping"]
     volumes:
       - redis_node_5_data:/data
 
   redis-node-6:
     <<: *redis-node
-    ports:
-      - "7006:6379"
+    command: ["--port", "7006"]
+    healthcheck:
+      test: ["CMD", "redis-cli", "-p", "7006", "ping"]
     volumes:
       - redis_node_6_data:/data
 
@@ -84,24 +99,23 @@ services:
     restart: on-failure
     command: >
       sh -c "until
-        redis-cli -h redis-node-1 -p 6379 ping > /dev/null 2>&1 &&
-        redis-cli -h redis-node-2 -p 6379 ping > /dev/null 2>&1 &&
-        redis-cli -h redis-node-3 -p 6379 ping > /dev/null 2>&1 &&
-        redis-cli -h redis-node-4 -p 6379 ping > /dev/null 2>&1 &&
-        redis-cli -h redis-node-5 -p 6379 ping > /dev/null 2>&1 &&
-        redis-cli -h redis-node-6 -p 6379 ping > /dev/null 2>&1;
+        redis-cli -p 7001 ping > /dev/null 2>&1 &&
+        redis-cli -p 7002 ping > /dev/null 2>&1 &&
+        redis-cli -p 7003 ping > /dev/null 2>&1 &&
+        redis-cli -p 7004 ping > /dev/null 2>&1 &&
+        redis-cli -p 7005 ping > /dev/null 2>&1 &&
+        redis-cli -p 7006 ping > /dev/null 2>&1;
       do
         echo 'Waiting for nodes...';
         sleep 1;
       done &&
-      CLUSTER_STATE=\$$(redis-cli -h redis-node-1 cluster info | grep cluster_state | cut -d: -f2 | tr -d '\\r') &&
+      CLUSTER_STATE=\$$(redis-cli -p 7001 cluster info | grep cluster_state | cut -d: -f2 | tr -d '\\r') &&
       if [ \"\$$CLUSTER_STATE\" = \"ok\" ]; then
         echo 'Cluster already exists';
       else
         echo 'Creating cluster...';
-        redis-cli --cluster create redis-node-1:6379 redis-node-2:6379 redis-node-3:6379 redis-node-4:6379 redis-node-5:6379 redis-node-6:6379 --cluster-replicas 1 --cluster-yes;
-      fi &&
-      redis-cli -h redis-node-1 -p 6379 cluster info | grep cluster_state:ok"
+        redis-cli --cluster create 127.0.0.1:7001 127.0.0.1:7002 127.0.0.1:7003 127.0.0.1:7004 127.0.0.1:7005 127.0.0.1:7006 --cluster-replicas 1 --cluster-yes;
+      fi"
     depends_on:
       redis-node-1:
         condition: service_healthy
@@ -121,11 +135,11 @@ services:
     image: ghcr.io/joeferner/redis-commander:${REDIS_COMMANDER_VERSION:-latest}
     restart: unless-stopped
     environment:
+      ADDRESS: "${REDIS_COMMANDER_BIND_ADDRESS:-0.0.0.0}"
+      PORT: "${REDIS_COMMANDER_PORT:-18081}"
       REDIS_LABEL: redis-cluster
-      CLUSTERS: redis-node-1:6379,redis-node-2:6379,redis-node-3:6379,redis-node-4:6379,redis-node-5:6379,redis-node-6:6379
+      CLUSTERS: 127.0.0.1:7001,127.0.0.1:7002,127.0.0.1:7003,127.0.0.1:7004,127.0.0.1:7005,127.0.0.1:7006
       IS_CLUSTER: true
-    ports:
-      - "${REDIS_COMMANDER_PORT:-18081}:8081"
     depends_on:
       redis-cluster-init:
         condition: service_completed_successfully
