Make Redis node ports configurable via environment variables

--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,15 @@ REDIS_VERSION=latest
 # Redis bind address (interface to listen on)
 REDIS_BIND_ADDRESS=127.0.0.1
 
+# Redis node ports
+# Default ports: 7001-7006
+REDIS_PORT_1=7001
+REDIS_PORT_2=7002
+REDIS_PORT_3=7003
+REDIS_PORT_4=7004
+REDIS_PORT_5=7005
+REDIS_PORT_6=7006
+
 # Redis Persistence Configuration
 # Enable AOF (Append Only File) persistence
 # yes: Enable AOF, no: Use RDB only
